js/js.translator/testData/incremental/invalidation/toplevelProperties/lib1/l1.5.kt
val globalVal = 3

inline val inlineGlobalVal: String
    get() = "2"
